<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.nitaattendence.AddTeacherActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/tan_background">

        <EditText
            android:id="@+id/nameofteacher_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="12sp"
            android:layout_marginBottom="12sp"/>
        <EditText
            android:id="@+id/coursebyteacher_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/coursename"
            android:layout_marginBottom="12sp"/>

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginBottom="12sp"/>
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="12sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/addteacher_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_teacher"
        android:layout_alignParentBottom="true"
        android:background="@color/adminlogin"
        android:textColor="#ffffff"/>

</RelativeLayout>
