<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.nitaattendence.AdminActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240sp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/giveattendence_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/give_attendence"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:paddingTop="48sp"
                    android:layout_margin="18sp"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:background="@color/adminlogin"/>
                <TextView
                    android:id="@+id/viewattendence_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/view_attendence"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:paddingTop="48sp"
                    android:layout_margin="18sp"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:background="@color/adminlogin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240sp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/viewteacher_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/view_teacher"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:paddingTop="48sp"
                    android:layout_margin="18sp"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:background="@color/adminlogin"/>
                <TextView
                    android:id="@+id/viewcourses_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/view_courses"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:layout_margin="18sp"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:background="@color/adminlogin"
                    android:paddingTop="48sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
